Actualizado de mecánicas
El jugador puede hacer daño y curarse desde el menú de opciones.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="character enemy" style="top: 20px; right: 20px;"></div>
         </div>
         <div class="options-board">
-            <button class="option-btn" onclick="luchar()">Luchar</button>
-            <button class="option-btn" onclick="curarse()">Curarse</button>
-            <button class="option-btn" onclick="defenderse()">Defenderse</button>
-            <button class="option-btn" onclick="huir()">Huir</button>
+            <button class="option-btn dmg" >Luchar</button>
+            <button class="option-btn heal" >Curarse</button>
+            <button class="option-btn defend" >Defenderse</button>
+            <button class="option-btn run" >Huir</button>
         </div>
     </div>
 </body>
