Actualización de combate
Se ha implementado una cura de rango aleatorio, además de precisión en las armas, se han implementado dos imágenes para los personajes, esto junto a barras de vida las cuales se modifican con el daño y la cura además de una condición de victoria.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 <body>
     <div class="main-container">
         <div class="game-board">
-            <div class="character player" style="bottom: 20px; left: 20px;"></div>
-            <div class="character enemy" style="top: 20px; right: 20px;"></div>
+            <div class="personaje player">
+                <img src="./img/Mercenario.png" alt="Jugador">
+                <div class="barra-vida" id="barraVidaJugador"></div>
+            </div>
+            <div class="personaje enemy">
+                <img src="./img/Ladron.png" alt="Enemigo">
+                <div class="barra-vida" id="barraVidaEnemigo"></div>
+            </div>
         </div>
         <div class="options-board">
             <button class="option-btn dmg" >Luchar</button>
